Replaced obsolete Character wrapper usage with modern alternatives.